HOT FIX - notifications on mobile

--- a/resources/assets/less/includes/elements/notifications.less
+++ b/resources/assets/less/includes/elements/notifications.less
@@ -6,7 +6,7 @@
 	top: @notification-top-position;
 
 	@media @phone{
-		width: @notification-width * 0.85;
+		width: @notification-width * 0.8;
 	}
 }
 
@@ -57,7 +57,7 @@
 				display: table-cell;
 
 				@media @phone{
-					width: 267px * 0.85;
+					width: 267px * 0.8;
 				}
 
 				.gritter-close{
